--- a/src/index.css
+++ b/src/index.css
@@ -51,14 +51,10 @@ code {
 }
 
 .login-container {
-  max-width: 500px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 50vh;
-}
-.login-wrapper {
-  background-color: lightblue;
-  width: 100%;
+  width: 450px;
+  height: 450px;
+  margin: 6rem auto;
+  background-color: 	#E8E8E8 !important;
+  border-radius: 8px;
+  padding: 1rem;
 }
