--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif; */
   font-family: "Alata", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -16,19 +13,7 @@ code {
     monospace;
 }
 
-.container {
-  display: grid;
-  grid-template-areas:
-    "header"
-    "home"
-    "footer";
-  grid-template-columns: 1fr;
-  grid-template-rows: 0px 1fr 100px;
-  height: 100vh;
-}
-
 .headerHide {
-  grid-area: header;
   z-index: 100;
   color: #000;
   display: flex;
@@ -37,13 +22,10 @@ code {
   position: fixed;
   width: 100%;
   top: -100px;
-  /* background-color: rgba(0, 0, 0, 0.2); */
   transition: all 0.3s ease-in-out;
 }
 .headerShow {
   z-index: 100;
-
-  grid-area: header;
   color: #fff;
   display: flex;
   justify-content: space-between;
@@ -54,13 +36,8 @@ code {
   background-color: rgba(0, 0, 0, 0.7);
   transition: all 0.3s ease-in-out;
 }
-.home {
-  grid-area: home;
-  /* overflow: hidden; */
-}
 
 .footer {
-  grid-area: footer;
   background-color: #e8e8e8;
   color: #000;
   display: flex;
@@ -94,42 +71,83 @@ code {
   overflow-x: hidden;
 }
 
-.thunder {
-  transform: rotate(-90deg);
-  font-size: 5rem;
+.landingbtn {
+  outline-color: none;
+  padding: 1rem;
+  cursor: pointer;
   font-weight: 900;
-  position: absolute;
-  left: -1rem;
-  color: #ffac33;
-  letter-spacing: -8px;
-}
-
-.media {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  font-size: 10px;
+  border: 1px solid #fff;
+  outline-color: #fff;
+  width: 200px;
+  background-color: #e8e8e8;
   letter-spacing: 2px;
-  transform: rotate(-90deg);
-  z-index: -1;
+  font-size: 1rem;
+
+  transition: all 0.6s ease-in-out;
 }
 
-.slide-container {
-  width: 100vw;
-  /* height: 100vh; */
-  /* z-index: -1; */
+.landingbtn:hover {
+  background-color: #ffac33;
+  font-weight: 900;
+  font-size: 1rem;
+  width: 200px;
+  letter-spacing: 3px;
+  outline-color: #ffac33;
+  border: 1px solid #ffac33;
 }
-.each-slide > div {
+
+.mouse {
+  width: 2em;
+  height: 3rem;
+  border: 2px solid #ffac33;
+  border-radius: 2rem;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  background-size: cover;
-  height: 100vh;
+}
+.mouse span {
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: #ffac33;
+  display: block;
+  border-radius: 50%;
+  margin: auto;
+  animation: move-wheel 1s linear infinite;
+}
+.arrow span {
+  display: block;
+  width: 0.5rem;
+  height: 0.5rem;
+  border: 2px solid transparent;
+  border-right-color: #ffac33;
+  border-bottom-color: #ffac33;
+  transform: rotate(45deg);
+  animation: move-arrow 0.7s alternate infinite;
 }
 
-.each-slide span {
-  padding: 20px;
-  font-size: 20px;
-  background: #efefef;
-  text-align: center;
+@keyframes move-wheel {
+  0% {
+    opacity: 0;
+    transform: translateY(-1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(1rem);
+  }
+}
+
+@keyframes move-arrow {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
 }
