--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
-
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -45,6 +44,7 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .login-container {
@@ -93,7 +93,7 @@ code {
   font-weight: 900;
   font-size: 1rem;
   width: 200px;
-  letter-spacing: 3px;
+  letter-spacing: 5px;
   outline-color: #ffac33;
   border: 1px solid #ffac33;
 }
@@ -152,4 +152,32 @@ code {
   100% {
     opacity: 1;
   }
+}
+
+.about {
+  background-color: orange;
+}
+
+.featuredbtn {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0.5rem;
+  cursor: pointer;
+  font-weight: 900;
+  border: 1px solid orange;
+  outline-color: orange;
+  width: 200px;
+  background-color: orange;
+  letter-spacing: 2px;
+  font-size: 1rem;
+  opacity: 0;
+  transition: all 0.6s ease-in-out;
+}
+
+.featured div img:hover + .featuredbtn,
+.featuredbtn:hover {
+  opacity: 1;
+  letter-spacing: 5px;
 }
