--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   font-family: "Alata", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f4f4f4;
+  background-color: #fff;
 }
 
 code {
@@ -157,6 +157,7 @@ code {
 .about {
   background-color: orange;
 }
+
 
 .featuredbtn {
   position: absolute;
