--- a/src/index.css
+++ b/src/index.css
@@ -186,3 +186,23 @@ code {
   padding: 2rem;
   margin-top: 5rem;
 }
+
+.inputFields{
+  padding:.5rem;
+  margin-bottom: .5rem;
+  border: .5px solid orange;
+  outline-color: red;
+  border-radius: 5px;
+}
+
+.inputBtn{
+  padding: .5rem;
+  cursor: pointer;
+  font-weight: 700;
+  border: 1px solid orange;
+  outline-color: orange;
+  background-color: #e8e8e8;
+  letter-spacing: 2px;
+  border-radius: 5px;
+  font-size: 1rem;
+}
