--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+*:focus{
+  outline: none
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -78,12 +82,13 @@ code {
   padding: 1rem;
   cursor: pointer;
   font-weight: 900;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   outline-color: #fff;
   width: 200px;
   background-color: #e8e8e8;
   letter-spacing: 2px;
   font-size: 1rem;
+  border-radius: 2rem;
 
   transition: all 0.6s ease-in-out;
 }
@@ -95,7 +100,10 @@ code {
   width: 200px;
   letter-spacing: 5px;
   outline-color: #ffac33;
-  border: 1px solid #ffac33;
+  border: 2px solid #f4f4f4;
+  border-radius: 2rem;
+  
+
 }
 
 .mouse {
@@ -166,13 +174,15 @@ code {
   padding: 0.5rem;
   cursor: pointer;
   font-weight: 900;
-  border: 1px solid orange;
+  border: 2px solid #f4f4f4;
   outline-color: orange;
   width: 200px;
   background-color: orange;
   letter-spacing: 2px;
   font-size: 1rem;
   opacity: 0;
+  border-radius: 2rem;
+
   transition: all 0.6s ease-in-out;
 }
 
@@ -205,4 +215,42 @@ code {
   letter-spacing: 2px;
   border-radius: 5px;
   font-size: 1rem;
+}
+
+.addToCartBtn{
+  padding: .5rem;
+  cursor: pointer;
+  font-weight: 700;
+  border: 1px solid orange;
+  outline-color: orange;
+  background-color: #e8e8e8;
+  letter-spacing: 2px;
+  border-radius: 5px;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.phones {
+  padding: 2rem;
+  margin-top: 5rem;
+}
+.pcs {
+  padding: 2rem;
+  margin-top: 5rem;
+}
+
+.submit{
+  width: 500px;
+}
+
+.confirmBtn{
+  cursor: pointer;
+  font-weight: 700;
+  border: 1px solid orange;
+  outline-color: orange;
+  background-color: #e8e8e8;
+  letter-spacing: 2px;
+  border-radius: 5px;
+  padding:.6rem;
+  width: 70px
 }
