--- a/src/index.css
+++ b/src/index.css
@@ -251,13 +251,12 @@ code {
   padding: .5rem;
   cursor: pointer;
   font-weight: 700;
-  border: 1px solid lightgray;
-  /* outline-color: orange; */
-  background-color: #e8e8e8;
+  border: 1px solid black;
+  background-color: rgba(0, 0, 0, 0.5);
   letter-spacing: 2px;
-  /* border-radius: 5px; */
   font-size: 1rem;
   width: 100%;
+  color: orange;
   position: absolute;
   bottom: 0;
   left: 50%;
